--- a/AUTHORS
+++ b/AUTHORS
@@ -39,3 +39,4 @@ CheungSKei <180353389@qq.com>
 xujinping <804677682@qq.com>
 dengzq <956796570@qq.com>
 pkuyaoyao <525841634@qq.com>
+HappyImp <kyluzoi@gmial.com>
