--- a/AUTHORS
+++ b/AUTHORS
@@ -45,3 +45,4 @@ qianhk <hongkai.qhk@alibaba-inc.com>
 法的空间 <zmtzawqlp@live.com>
 joechan-cq <1787678994@qq.com>
 Roger Luo<tjrogertj@gmail.com>
+Starve-to-Death  <506119631@qq.com>
