[Android] 解决FlutterBoostFragment切换时可能闪现上一个页面的问题
可能原因是，Native端的容器切换与Dart侧的切换不同步导致。也就是Native先切换过去了，显示了新页面，但是dart还没有切换，刷了一帧当前页面后，才切换到新页面。

co-auther: huan10

--- a/AUTHORS
+++ b/AUTHORS
@@ -45,3 +45,4 @@ qianhk <hongkai.qhk@alibaba-inc.com>
 法的空间 <zmtzawqlp@live.com>
 joechan-cq <1787678994@qq.com>
 Roger Luo<tjrogertj@gmail.com>
+huan10 <huanly.w@gmail.com>
