[Android] 通过队列来记录活动的Activity，解决部分场景下topActivity可能为空的问题 #1806

--- a/AUTHORS
+++ b/AUTHORS
@@ -46,3 +46,4 @@ qianhk <hongkai.qhk@alibaba-inc.com>
 joechan-cq <1787678994@qq.com>
 Roger Luo<tjrogertj@gmail.com>
 huan10 <huanly.w@gmail.com>
+Starve-to-Death <506119631@qq.com>
