--- a/AUTHORS
+++ b/AUTHORS
@@ -47,3 +47,4 @@ joechan-cq <1787678994@qq.com>
 Roger Luo<tjrogertj@gmail.com>
 huan10 <huanly.w@gmail.com>
 Starve-to-Death <506119631@qq.com>
+youyi-sizuru <xzpwork@gmail.com>
