fix: android add namespace

--- a/AUTHORS
+++ b/AUTHORS
@@ -48,3 +48,4 @@ Roger Luo<tjrogertj@gmail.com>
 huan10 <huanly.w@gmail.com>
 Starve-to-Death <506119631@qq.com>
 youyi-sizuru <xzpwork@gmail.com>
+wyq0918dev <815099246@qq.com>
