--- a/example/android/app/src/main/res/values/strings.xml
+++ b/example/android/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="open_native">open native page</string>
     <string name="open_flutter">open flutter page</string>
     <string name="open_flutter_fragment">open flutter fragment page</string>
+    <string name="open_flutter_platformview_fragment">open flutter platformview fragment page</string>
     <string name="open_custom_view_tab">open custom view page</string>
     <string name="native_info">This is a native activity</string>
     <string name="flutter1">Flutter1</string>
